[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
# name it as your package name
name = "qtcloud-id-provider"
# semetric versions
version = "0.1.0-alpha.1"
# describe the package within one sentence
description = "Provider of QuantTide Digital Identity Cloud"
authors = [{name = "QuantTide Inc.", email = "opensource@quanttide.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = '>=3.10'
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.1",
    "sqlalchemy>=2.0.36",
    "passlib>=1.7.4",
    "pyjwt>=2.10.0",
    "python-multipart>=0.0.17",
]
# dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.2.2",
    "httpx>=0.27.2",
]
